--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,8 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 		/>
+		<!-- w3css -->
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
